# date-planner

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  coverage.xml  manage.py  pyproject.toml  pytest.ini
backend/apps/common/: __init__.py  apps.py  authentication.py  capabilities.py  confirmation_views.py  mixins.py  models.py  planning_views.py  publication_views.py  screen_views.py  screens.py  serializers.py  urls.py  views.py
backend/apps/common/migrations/: 0001_initial.py  0002_invitation_management_token_hash.py  0003_invitation_response_fields.py  0004_invitation_planning.py  0005_invitation_plan_confirmation.py  0006_invitation_creation_mode.py  0007_invitation_publication_lifecycle.py  0008_invitation_screen_config.py  __init__.py
backend/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: start.sh
backend/tests/: conftest.py  test_confirmation.py  test_cors.py  test_health.py  test_invitation_responses.py  test_invitation_screens.py  test_invitations.py  test_management_access.py  test_management_editing.py  test_planning.py  test_publication.py  test_throttling.py
docs/: quality-baseline.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/composables/: useBuilderAutosave.ts  useClipboard.ts  useExpiryClock.ts  useInvitationsApi.ts  useManagementToken.ts  useRunawayButton.ts
frontend/tests/: builder.test.ts  invitationImages.test.ts  (+6 more)
(+23 files in other folders)
