[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "date-planner-backend"
version = "0.1.0"
description = "Backend API for Date Planner"
requires-python = ">=3.12,<3.15"
dependencies = [
    "Django==6.0.6",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
    "drf-spectacular==0.30.0",
    "gunicorn==26.0.0",
    "psycopg[binary]==3.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "ruff==0.15.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
branch = true
source = ["apps.common"]
omit = [
    "*/apps.py",
    "*/migrations/*",
    "*/urls.py",
]

[tool.coverage.report]
fail_under = 85
precision = 2
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
